--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <script type="text/javascript">
 function show_confirm()
 {
-const one = confirm('first confirm')
+const one = confirm('firsts confirm')
 
   if (one) {
     const two = confirm('second confirm')
