修改confirm为中文

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <script type="text/javascript">
 function show_confirm()
 {
-const one = confirm('firsts confirm')
+const one = confirm('是否提交？')
 
   if (one) {
     const two = confirm('second confirm')
