--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <script type="text/javascript">
 function show_confirm()
 {
-const one = confirm('是否提交？')
+// const one = confirm('是否提交？')
 
-  if (one) {
+  if (confirm('是否提交？')) {
     const two = confirm('second confirm')
 
     if (!two) {
