去掉了连续confirm

--- a/index.html
+++ b/index.html
@@ -6,13 +6,7 @@ function show_confirm()
 // const one = confirm('是否提交？')
 
   if (confirm('是否提交？')) {
-    const two = confirm('second confirm')
-
-    if (!two) {
-      const three = confirm('third confirm')
-
-      confirm('third confirm was ' + three)
-    }
+   alert(111);
   }
 }
 
