--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ function show_confirm()
 <body>
 
 <input type="button" onclick="show_confirm()" value="Show a confirm box" />
+<iframe src="https://cupidyan.github.io/loveyou/" frameborder="0"></iframe>
 
 </body>
 </html>
