去掉了iframe标签

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ function show_confirm()
 <body>
 
 <input type="button" onclick="show_confirm()" value="Show a confirm box" />
-<iframe src="https://cupidyan.github.io/loveyou/" frameborder="0"></iframe>
+<!-- <iframe src="https://cupidyan.github.io/loveyou/" frameborder="0" id="testiframe"></iframe> -->
 
 </body>
 </html>
